--- a/docs/assets/scss/common/_global.scss
+++ b/docs/assets/scss/common/_global.scss
@@ -96,7 +96,6 @@ body {
 @include media-breakpoint-up(lg) {
   .docs-sidebar {
     order: 0;
-    border-right: 1px solid $gray-200;
   }
 
   @supports ((position:-webkit-sticky) or (position:sticky)) {
