--- a/docs/assets/scss/layouts/_sidebar.scss
+++ b/docs/assets/scss/layouts/_sidebar.scss
@@ -1,7 +1,7 @@
 .docs-links,
 .docs-toc {
   scrollbar-width: thin;
-  scrollbar-color: $white $white;
+  scrollbar-color: $white transparent;
 }
 
 .docs-links::-webkit-scrollbar,
@@ -22,7 +22,7 @@
 .docs-links:hover,
 .docs-toc:hover {
   scrollbar-width: thin;
-  scrollbar-color: $gray-200 $white;
+  scrollbar-color: $gray-200 transparent;
 }
 
 .docs-links:hover::-webkit-scrollbar-thumb,
